2014-10-25 Simon Fraser <simon.fraser@apple.com>
    Made "Grouping property values" into a section so that it can be linked from elsewhere.
    Added a "card flip" example for background-visibility
    Rewrote the "Accumulated 3D Transformation Matrix Computation" section.
    Other minor tweaks.

2014-10-24 Simon Fraser <simon.fraser@apple.com>
    Rewrite the "Transform Rendering Model" section with a more precise description of the model. Substantive changes include a new 'auto' value for transform-style, the concept of a "3D-rendering context" (akin to CSS stacking context), and a better description of the rendering order.

2014-10-24 Simon Fraser <simon.fraser@apple.com>
    Move the section about perspective rendering closer to the mathematical description.

2014-10-24 Simon Fraser <simon.fraser@apple.com>
    Convert Issues into bikeshed-friendly format, and remove some <p>.

2014-10-21 Simon Fraser <simon.fraser@apple.com>
    Regenerate Overview.html. No text changes.

2014-05-28 Dirk Schulze <dschulze@adobe.com>
    Do not allow optional whitespace between the name of the
    function and the left parenthesis.

2014-05-26 Dirk Schulze <dschulze@adobe.com>
    Replace <translation-value> with <length>.

2014-03-24 Dirk Schulze <dschulze@adobe.com>
    Fixed typo for translateY() transform function.
    https://www.w3.org/Bugs/Public/show_bug.cgi?id=25134

2014-02-01 Dirk Schulze <dschulze@adobe.com>
    Extend defintion for user space on use and export it.

2014-01-26 Simon Fraser <simon.fraser@apple.com>
    Provide an anchor for attributeName to keep bikeshed happy.

2014-01-25 Simon Fraser <simon.fraser@apple.com>
    mask-box-image-source -> mask-box-source
    
2014-01-25 Simon Fraser <simon.fraser@apple.com>
    Change to note that transforms do affect getClientRects() and 
    getBoundingClientRect(), and add a paragraph to the Module Interations
    section about his.
    
    Also change wording of the note on transforms not affecting layout,