@@ -246,14 +246,15 @@ Non-experimental implementations</span></a></ul><li><a href=#references><span cl
 
   <dt><dfn data-dfn-type=dfn data-noexport="" id=3d-rendering-context>3D rendering context<a class=self-link href=#3d-rendering-context></a></dfn></dt>
   <dd>
-    A set of elements with a common ancestor which share a common three-dimensional coordinate system, as described <a href=#3d-rendering-contexts>below
-</a></dl><a href=#3d-rendering-contexts>
+    A set of elements with a common ancestor which share a common three-dimensional coordinate system, as described <a href=#3d-rendering-contexts>below</a>.
+  </dd>
+</dl>
 
 
 
 <h2 class="heading settled" data-level=5 id=two-dimensional-subset><span class=secno>5. </span><span class=content>Two Dimensional Subset</span><a class=self-link href=#two-dimensional-subset></a></h2>
 
-</a><p><a href=#3d-rendering-contexts>UAs may not always be able to render three-dimensional transforms and then just support a two-dimensional subset of this specification. In this case </a><a href=#three-d-transform-functions>three-dimensional transforms</a> and the properties <a class=property data-link-type=propdesc href=#propdef-transform-style title=transform-style>transform-style</a>, <a class=property data-link-type=propdesc href=#propdef-perspective title=perspective>perspective</a>, <a class=property data-link-type=propdesc href=#propdef-perspective-origin title=perspective-origin>perspective-origin</a> and <a class=property data-link-type=propdesc href=#propdef-backface-visibility title=backface-visibility>backface-visibility</a> must not be supported. Section <a href=#3d-transform-rendering>3D Transform Rendering</a> does not apply. Matrix decomposing uses the technique taken from the "unmatrix" method in "Graphics Gems II, edited by Jim Arvo", simplified for the 2D case. Section <a href=#mathematical-description>Mathematical Description of Transform Functions</a> is still effective but can be reduced by using a 3x3 transformation matrix where <em>a</em> equals m<sub>11</sub>, <em>b</em> equals m<sub>12</sub>, <em>c</em> equals m<sub>21</sub>, <em>d</em> equals m<sub>22</sub>, <em>e</em> equals m<sub>41</sub> and <em>f</em> equals m<sub>42</sub> (see <a href=#MatrixDefined>A 2D 3x2 matrix with six parameter</a>).</p>
+<p>UAs may not always be able to render three-dimensional transforms and then just support a two-dimensional subset of this specification. In this case <a href=#three-d-transform-functions>three-dimensional transforms</a> and the properties <a class=property data-link-type=propdesc href=#propdef-transform-style title=transform-style>transform-style</a>, <a class=property data-link-type=propdesc href=#propdef-perspective title=perspective>perspective</a>, <a class=property data-link-type=propdesc href=#propdef-perspective-origin title=perspective-origin>perspective-origin</a> and <a class=property data-link-type=propdesc href=#propdef-backface-visibility title=backface-visibility>backface-visibility</a> must not be supported. Section <a href=#3d-transform-rendering>3D Transform Rendering</a> does not apply. Matrix decomposing uses the technique taken from the "unmatrix" method in "Graphics Gems II, edited by Jim Arvo", simplified for the 2D case. Section <a href=#mathematical-description>Mathematical Description of Transform Functions</a> is still effective but can be reduced by using a 3x3 transformation matrix where <em>a</em> equals m<sub>11</sub>, <em>b</em> equals m<sub>12</sub>, <em>c</em> equals m<sub>21</sub>, <em>d</em> equals m<sub>22</sub>, <em>e</em> equals m<sub>41</sub> and <em>f</em> equals m<sub>42</sub> (see <a href=#MatrixDefined>A 2D 3x2 matrix with six parameter</a>).</p>
 
 <div class=figure>
   <img alt="3x3 matrix" height=79 src=3x3matrix.png title="\begin{bmatrix} a &amp; c &amp; e \\ b
@@ -368,7 +369,7 @@ Non-experimental implementations</span></a></ul><li><a href=#references><span cl
 
 <p>Normally, elements render as flat planes, and are rendered into the same plane as their containing block. Often this is the plane shared by the rest of the page. Two-dimensional transform functions can alter the appearance of an element, but that element is still rendered into the same plane as its containing block.</p>
 
-<p>Three-dimensional transforms can result in transformation matrices with a non-zero Z component (where the Z axis projects out of the plane of the screen). This can result in an element rendering on a different plane than that of its containing block. This may affect the front-to-back rendering order of that element relative to other elements, as well as causing it to intersect with other elements. This behavior depends on whether the element is a member of a <a data-link-type=dfn href=#3d-rendering-context title="3D rendering context">3D rendering context</a>, as described below.</p>
+<p>Three-dimensional transforms can result in transformation matrices with a non-zero Z component (where the Z axis projects out of the plane of the screen). This can result in an element rendering on a different plane than that of its containing block. This may affect the front-to-back rendering order of that element relative to other elements, as well as causing it to intersect with other elements.</p>
 
 <div class=example>
 
