@@ -1,4 +1,7 @@
 2014-10-25 Simon Fraser <simon.fraser@apple.com>
+    Terminate an anchor, and remove an incorrect statement about 3D rendering context membership.
+
+2014-10-25 Simon Fraser <simon.fraser@apple.com>
     Made "Grouping property values" into a section so that it can be linked from elsewhere.
     Added a "card flip" example for background-visibility
     Rewrote the "Accumulated 3D Transformation Matrix Computation" section.
